--- a/css/style.css
+++ b/css/style.css
@@ -6,53 +6,52 @@ body {
     background-position: center center;
 }
 
-.dws-wrapper {
+.wrapper_container {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
 }
 
-.dws-form {
-   /*  background-color: rgba(255, 255, 255, 0.2); */
+.form_registration {
     padding: 10px;
     width: 400px;
 }
 
-.button{
+.button {
     display: block;
     font-size: 25px;
     font-weight: bold;
     text-align: center;
-    color:#ffff;
+    color: #ffff;
     width: 100%;
     height: 50px;
     border: 2px solid green;
 }
-hr{
+
+hr {
     border: 2px solid green;
 }
 
-.dws-form a {
+.form_registration a {
     text-decoration: none;
     transition: .99s;
 }
 
-.dws-form input {
+.form_registration input {
     font-size: 30px;
     padding-top: 10px;
     margin-bottom: 25px;
-    display: block;
     width: 100%;
-    background:none;
-    color:#fff;
+    background: none;
+    color: #fff;
     border: none;
     border-bottom: 2px solid green;
-	outline: 0;
-	outline-offset: 0;
+    outline: 0;
+    outline-offset: 0;
 }
 
-.tab-form {
+.tab_form {
     display: none;
 }
 
@@ -66,7 +65,8 @@ label.tab {
     cursor: pointer;
 }
 
-label.tab_active, input[name="tabs"]:checked + label {
+label.tab_active,
+input[name="tabs"]:checked+label {
     font-size: 30px;
     font-weight: 700;
     padding: 15px;
@@ -75,11 +75,13 @@ label.tab_active, input[name="tabs"]:checked + label {
     cursor: pointer;
 }
 
-input[name="tabs"]{
+input[name="tabs"] {
     display: none;
 }
 
-.tab-form.active,#tab_1:checked ~ #form_1, #tab_2:checked ~ #form_2{
+.tab_form.active,
+#tab_login:checked~#form_registration,
+#tab_register:checked~#form_entrance {
     display: block;
 }
 
